# ai-tooling-presentation

./: .gitignore  README.md  REQUIREMENTS.md  index.html  justfile  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  pages.yml
examples/curl/: 01-basic-chat.sh  02-tool-schema.sh  03-tool-result-roundtrip.sh  README.md
examples/curl/expected-output/: README.md
examples/curl/payloads/: 01-basic-chat.json  02-tool-schema.json  (+1 more)
examples/rust/: Cargo.toml  README.md
examples/rust/crates/genai-tool-basic/: Cargo.toml
examples/rust/crates/genai-tool-basic/src/: main.rs
examples/rust/crates/genai-tool-roundtrip/: Cargo.toml
examples/rust/crates/genai-tool-roundtrip/src/: main.rs
examples/rust/crates/mini-copilot-cli/: Cargo.toml
examples/rust/crates/mini-copilot-cli/src/: main.rs
examples/rust/crates/mini-copilot-core/: Cargo.toml
examples/rust/crates/mini-copilot-core/src/: lib.rs
examples/rust/crates/mini-copilot-http/: Cargo.toml
examples/rust/crates/mini-copilot-http/src/: main.rs
examples/rust/fixtures/workspace/: README.md  service_status.md
public/transcripts/: 01-basic-chat.md  02-tool-schema.md  03-tool-result-roundtrip.md  agent-loop.md  ask.md  genai-tool-basic-live.md  genai-tool-basic.md  genai-tool-roundtrip-live.md  genai-tool-roundtrip.md  health.md  hooks.md  mini-copilot-agent-loop.md  mini-copilot-ask.md  mini-copilot-cli.md  mini-copilot-hooks.md  mini-copilot-http.md  mini-copilot-veto.md  veto.md
scripts/: check.sh  demo-env.example
slides/: deck.ts  reveal-modules.d.ts  theme.css
