[workspace]
resolver = "3"
members = [
  "crates/genai-tool-basic",
  "crates/genai-tool-roundtrip",
  "crates/mini-copilot-core",
  "crates/mini-copilot-cli",
  "crates/mini-copilot-http"
]

[workspace.package]
edition = "2024"
license = "MIT"
publish = false

[workspace.dependencies]
axum = "0.8.7"
clap = { version = "4.5.51", features = ["derive"] }
genai = "0.6.0-beta.18"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tempfile = "3.23.0"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "net"] }
