[package]
name = "mini-copilot-http"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
axum.workspace = true
clap.workspace = true
mini-copilot-core = { path = "../mini-copilot-core" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
